-Dxxx_CALL based on compiler id

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,7 +60,6 @@ if(WI4MPI_COMPILER MATCHES GCC OR WI4MPI_COMPILER MATCHES GNU)
     set(CMAKE_C_FLAGS_DEBUG   "${CMAKE_C_FLAGS} -g -O3 -pthread -DDEBUG")
     set(CMAKE_C_FLAGS_GCC_JIT "${CMAKE_C_FLAGS} -g -O3 -pthread -D_WI4MPI_GCC_JIT")
     set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS} -O3 -pthread")
-    add_definitions(-DGFORT_CALL)
     set(CC "gcc")
     set(CXX "g++")
     set(FC "gfortran")
@@ -69,7 +68,6 @@ elseif(WI4MPI_COMPILER MATCHES INTEL)
     set(CMAKE_C_FLAGS_DEBUG   "${CMAKE_C_FLAGS} -g -O3 -pthread -DDEBUG")
     set(CMAKE_C_FLAGS_GCC_JIT "${CMAKE_C_FLAGS} -g -O3 -pthread -D_WI4MPI_GCC_JIT")
     set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS} -O3 -pthread")
-    add_definitions(-DIFORT_CALL)
     set(CC "icc")
     set(CXX "icpc")
     set(FC "ifort")
@@ -78,7 +76,6 @@ elseif(WI4MPI_COMPILER MATCHES PGI)
     set(CMAKE_C_FLAGS_DEBUG   "${CMAKE_C_FLAGS} -g -O3 -DDEBUG")
     set(CMAKE_C_FLAGS_GCC_JIT "${CMAKE_C_FLAGS} -g -O3 -D_WI4MPI_GCC_JIT")
     set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS} -O3")
-    add_definitions(-DPGI_CALL)
     set(CC "pgcc")
     set(CXX "pgc++")
     set(FC "pgfortran")
@@ -87,7 +84,6 @@ elseif(WI4MPI_COMPILER MATCHES LLVM)
     set(CMAKE_C_FLAGS_DEBUG   "${CMAKE_C_FLAGS} -g -O3 -DDEBUG")
     set(CMAKE_C_FLAGS_GCC_JIT "${CMAKE_C_FLAGS} -g -O3 -D_WI4MPI_GCC_JIT")
     set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS} -O3")
-    add_definitions(-DFLANG_CALL)
     set(CC "clang")
     set(CXX "clang++")
     set(FC "flang")
@@ -96,7 +92,6 @@ elseif(WI4MPI_COMPILER MATCHES ARMCLANG)
     set(CMAKE_C_FLAGS_DEBUG   "${CMAKE_C_FLAGS} -g -O3 -DDEBUG")
     set(CMAKE_C_FLAGS_GCC_JIT "${CMAKE_C_FLAGS} -g -O3 -D_WI4MPI_GCC_JIT")
     set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS} -O3")
-    add_definitions(-DFLANG_CALL)
     set(CC "armclang")
     set(CXX "armclang++")
     set(FC "armflang")
@@ -105,7 +100,6 @@ elseif(WI4MPI_COMPILER MATCHES FUJITSU)
     set(CMAKE_C_FLAGS_DEBUG   "${CMAKE_C_FLAGS} -g -O3 -pthread -DDEBUG")
     set(CMAKE_C_FLAGS_GCC_JIT "${CMAKE_C_FLAGS} -g -O3 -pthread -D_WI4MPI_GCC_JIT")
     set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS} -O3 -pthread")
-    add_definitions(-DGFORT_CALL)
     set(CC "fcc")
     set(CXX "FCC")
     set(FC "frt")
@@ -140,6 +134,17 @@ set(CMAKE_C_STANDARD_REQUIRED ON)
 
 if(CMAKE_C_COMPILER_ID MATCHES "(GNU|Intel|Clang)")
     add_compile_options(-fcommon)
+endif()
+if(CMAKE_Fortran_COMPILER_ID MATCHES "Intel")
+    add_definitions(-DIFORT_CALL)
+elseif(CMAKE_Fortran_COMPILER_ID STREQUAL "Flang")
+    add_definitions(-DFLANG_CALL)
+elseif(CMAKE_Fortran_COMPILER_ID MATCHES "(PGI|NVHPC)")
+    add_definitions(-DPGI_CALL)
+elseif(CMAKE_Fortran_COMPILER_ID MATCHES "(GNU|Fujitsu)")
+    add_definitions(-DGFORT_CALL)
+else()
+    message(FATAL_ERROR "Unsupported fortran compiler: ${CMAKE_Fortran_COMPILER}")
 endif()
 add_compile_options(-shared -fPIC)
 
