--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,7 +56,7 @@ if(WI4MPI_COMPILER MATCHES GCC OR WI4MPI_COMPILER MATCHES GNU)
     if(WI4MPI_COMPILER MATCHES GNU)
     message(DEPRECATION "The GNU value for WI4MPI_COMPILER is deprecated and will be removed in the future; use GCC instead. However, for reasons of backward compatibility, the GNU syntax is still valid for now.")
     endif()
-    set(CMAKE_C_FLAGS_NORMAL  "${CMAKE_C_FLAGS} -g -O3")
+    set(CMAKE_C_FLAGS_RELWITHDEBINFO  "${CMAKE_C_FLAGS} -g -O3")
     set(CMAKE_C_FLAGS_DEBUG   "${CMAKE_C_FLAGS} -g -O3 -DDEBUG")
     set(CMAKE_C_FLAGS_GCC_JIT "${CMAKE_C_FLAGS} -g -O3 -D_WI4MPI_GCC_JIT")
     set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS} -O3")
@@ -64,7 +64,7 @@ if(WI4MPI_COMPILER MATCHES GCC OR WI4MPI_COMPILER MATCHES GNU)
     set(CXX "g++")
     set(FC "gfortran")
 elseif(WI4MPI_COMPILER MATCHES INTEL)
-    set(CMAKE_C_FLAGS_NORMAL  "${CMAKE_C_FLAGS} -g -O3")
+    set(CMAKE_C_FLAGS_RELWITHDEBINFO  "${CMAKE_C_FLAGS} -g -O3")
     set(CMAKE_C_FLAGS_DEBUG   "${CMAKE_C_FLAGS} -g -O3 -DDEBUG")
     set(CMAKE_C_FLAGS_GCC_JIT "${CMAKE_C_FLAGS} -g -O3 -D_WI4MPI_GCC_JIT")
     set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS} -O3")
@@ -72,7 +72,7 @@ elseif(WI4MPI_COMPILER MATCHES INTEL)
     set(CXX "icpc")
     set(FC "ifort")
 elseif(WI4MPI_COMPILER MATCHES PGI)
-    set(CMAKE_C_FLAGS_NORMAL  "${CMAKE_C_FLAGS} -g -O3")
+    set(CMAKE_C_FLAGS_RELWITHDEBINFO  "${CMAKE_C_FLAGS} -g -O3")
     set(CMAKE_C_FLAGS_DEBUG   "${CMAKE_C_FLAGS} -g -O3 -DDEBUG")
     set(CMAKE_C_FLAGS_GCC_JIT "${CMAKE_C_FLAGS} -g -O3 -D_WI4MPI_GCC_JIT")
     set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS} -O3")
@@ -80,7 +80,7 @@ elseif(WI4MPI_COMPILER MATCHES PGI)
     set(CXX "pgc++")
     set(FC "pgfortran")
 elseif(WI4MPI_COMPILER MATCHES LLVM)
-    set(CMAKE_C_FLAGS_NORMAL  "${CMAKE_C_FLAGS} -g -O3")
+    set(CMAKE_C_FLAGS_RELWITHDEBINFO  "${CMAKE_C_FLAGS} -g -O3")
     set(CMAKE_C_FLAGS_DEBUG   "${CMAKE_C_FLAGS} -g -O3 -DDEBUG")
     set(CMAKE_C_FLAGS_GCC_JIT "${CMAKE_C_FLAGS} -g -O3 -D_WI4MPI_GCC_JIT")
     set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS} -O3")
@@ -88,7 +88,7 @@ elseif(WI4MPI_COMPILER MATCHES LLVM)
     set(CXX "clang++")
     set(FC "flang")
 elseif(WI4MPI_COMPILER MATCHES ARMCLANG)
-    set(CMAKE_C_FLAGS_NORMAL  "${CMAKE_C_FLAGS} -g -O3")
+    set(CMAKE_C_FLAGS_RELWITHDEBINFO  "${CMAKE_C_FLAGS} -g -O3")
     set(CMAKE_C_FLAGS_DEBUG   "${CMAKE_C_FLAGS} -g -O3 -DDEBUG")
     set(CMAKE_C_FLAGS_GCC_JIT "${CMAKE_C_FLAGS} -g -O3 -D_WI4MPI_GCC_JIT")
     set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS} -O3")
@@ -96,7 +96,7 @@ elseif(WI4MPI_COMPILER MATCHES ARMCLANG)
     set(CXX "armclang++")
     set(FC "armflang")
 elseif(WI4MPI_COMPILER MATCHES FUJITSU)
-    set(CMAKE_C_FLAGS_NORMAL  "${CMAKE_C_FLAGS} -g -O3")
+    set(CMAKE_C_FLAGS_RELWITHDEBINFO  "${CMAKE_C_FLAGS} -g -O3")
     set(CMAKE_C_FLAGS_DEBUG   "${CMAKE_C_FLAGS} -g -O3 -DDEBUG")
     set(CMAKE_C_FLAGS_GCC_JIT "${CMAKE_C_FLAGS} -g -O3 -D_WI4MPI_GCC_JIT")
     set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS} -O3")
@@ -156,13 +156,13 @@ endif()
 
 #Define the compiling option according to the chosen release
 if(WI4MPI_RELEASE MATCHES DEBUG)
-   set(WI4MPI_FLAGS ${CMAKE_C_FLAGS_DEBUG})
+   set(CMAKE_BUILD_TYPE "Debug")
 elseif(WI4MPI_RELEASE MATCHES RELEASE)
-   set(WI4MPI_FLAGS ${CMAKE_C_FLAGS_RELEASE})
+    set(CMAKE_BUILD_TYPE "Release")
 elseif(WI4MPI_RELEASE MATCHES GCC_JIT)
-     set(WI4MPI_FLAGS ${CMAKE_C_FLAGS_GCC_JIT})
+    set(CMAKE_BUILD_TYPE "GCC_JIT")
 else()
-   set(WI4MPI_FLAGS ${CMAKE_C_FLAGS_NORMAL})
+    set(CMAKE_BUILD_TYPE "RelWithDebInfo")
 endif()
 
 set(THREADS_PREFER_PTHREAD_FLAG TRUE)
