Make debug printing and jit as option

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,8 @@ set(CMAKE_MODULE_PATH
      ${CMAKE_CURRENT_DIR}/cmake
    )
 
+option(WI4MPI_DEBUG "Add debug printing in the wrapped calls")
+option(WI4MPI_JIT "Use JIT compilation for user-provided stuff (required gcc in the PATH at run time")
 
 #The Rpath Strikes Back
 set(CMAKE_SKIP_RPATH TRUE)
@@ -57,48 +59,36 @@ if(WI4MPI_COMPILER MATCHES GCC OR WI4MPI_COMPILER MATCHES GNU)
     message(DEPRECATION "The GNU value for WI4MPI_COMPILER is deprecated and will be removed in the future; use GCC instead. However, for reasons of backward compatibility, the GNU syntax is still valid for now.")
     endif()
     set(CMAKE_C_FLAGS_RELWITHDEBINFO  "${CMAKE_C_FLAGS} -g -O3")
-    set(CMAKE_C_FLAGS_DEBUG   "${CMAKE_C_FLAGS} -g -O3 -DDEBUG")
-    set(CMAKE_C_FLAGS_GCC_JIT "${CMAKE_C_FLAGS} -g -O3 -D_WI4MPI_GCC_JIT")
     set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS} -O3")
     set(CC "gcc")
     set(CXX "g++")
     set(FC "gfortran")
 elseif(WI4MPI_COMPILER MATCHES INTEL)
     set(CMAKE_C_FLAGS_RELWITHDEBINFO  "${CMAKE_C_FLAGS} -g -O3")
-    set(CMAKE_C_FLAGS_DEBUG   "${CMAKE_C_FLAGS} -g -O3 -DDEBUG")
-    set(CMAKE_C_FLAGS_GCC_JIT "${CMAKE_C_FLAGS} -g -O3 -D_WI4MPI_GCC_JIT")
     set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS} -O3")
     set(CC "icc")
     set(CXX "icpc")
     set(FC "ifort")
 elseif(WI4MPI_COMPILER MATCHES PGI)
     set(CMAKE_C_FLAGS_RELWITHDEBINFO  "${CMAKE_C_FLAGS} -g -O3")
-    set(CMAKE_C_FLAGS_DEBUG   "${CMAKE_C_FLAGS} -g -O3 -DDEBUG")
-    set(CMAKE_C_FLAGS_GCC_JIT "${CMAKE_C_FLAGS} -g -O3 -D_WI4MPI_GCC_JIT")
     set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS} -O3")
     set(CC "pgcc")
     set(CXX "pgc++")
     set(FC "pgfortran")
 elseif(WI4MPI_COMPILER MATCHES LLVM)
     set(CMAKE_C_FLAGS_RELWITHDEBINFO  "${CMAKE_C_FLAGS} -g -O3")
-    set(CMAKE_C_FLAGS_DEBUG   "${CMAKE_C_FLAGS} -g -O3 -DDEBUG")
-    set(CMAKE_C_FLAGS_GCC_JIT "${CMAKE_C_FLAGS} -g -O3 -D_WI4MPI_GCC_JIT")
     set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS} -O3")
     set(CC "clang")
     set(CXX "clang++")
     set(FC "flang")
 elseif(WI4MPI_COMPILER MATCHES ARMCLANG)
     set(CMAKE_C_FLAGS_RELWITHDEBINFO  "${CMAKE_C_FLAGS} -g -O3")
-    set(CMAKE_C_FLAGS_DEBUG   "${CMAKE_C_FLAGS} -g -O3 -DDEBUG")
-    set(CMAKE_C_FLAGS_GCC_JIT "${CMAKE_C_FLAGS} -g -O3 -D_WI4MPI_GCC_JIT")
     set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS} -O3")
     set(CC "armclang")
     set(CXX "armclang++")
     set(FC "armflang")
 elseif(WI4MPI_COMPILER MATCHES FUJITSU)
     set(CMAKE_C_FLAGS_RELWITHDEBINFO  "${CMAKE_C_FLAGS} -g -O3")
-    set(CMAKE_C_FLAGS_DEBUG   "${CMAKE_C_FLAGS} -g -O3 -DDEBUG")
-    set(CMAKE_C_FLAGS_GCC_JIT "${CMAKE_C_FLAGS} -g -O3 -D_WI4MPI_GCC_JIT")
     set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS} -O3")
     set(CC "fcc")
     set(CXX "FCC")
@@ -156,13 +146,21 @@ endif()
 
 #Define the compiling option according to the chosen release
 if(WI4MPI_RELEASE MATCHES DEBUG)
-   set(CMAKE_BUILD_TYPE "Debug")
+   set(CMAKE_BUILD_TYPE "RelWithDebInfo")
+   set(WI4MPI_DEBUG ON)
 elseif(WI4MPI_RELEASE MATCHES RELEASE)
     set(CMAKE_BUILD_TYPE "Release")
 elseif(WI4MPI_RELEASE MATCHES GCC_JIT)
-    set(CMAKE_BUILD_TYPE "GCC_JIT")
+    set(CMAKE_BUILD_TYPE "RelWithDebInfo")
+    set(WI4MPI_JIT ON)
 else()
     set(CMAKE_BUILD_TYPE "RelWithDebInfo")
+endif()
+if(WI4MPI_DEBUG)
+    add_definitions(-DDEBUG)
+endif()
+if(WI4MPI_JIT)
+    add_definitions(-D_WI4MPI_GCC_JIT)
 endif()
 
 set(THREADS_PREFER_PTHREAD_FLAG TRUE)
