set flags for build types outside WI4MPI_COMPILER ifs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,38 +58,26 @@ if(WI4MPI_COMPILER MATCHES GCC OR WI4MPI_COMPILER MATCHES GNU)
     if(WI4MPI_COMPILER MATCHES GNU)
     message(DEPRECATION "The GNU value for WI4MPI_COMPILER is deprecated and will be removed in the future; use GCC instead. However, for reasons of backward compatibility, the GNU syntax is still valid for now.")
     endif()
-    set(CMAKE_C_FLAGS_RELWITHDEBINFO  "${CMAKE_C_FLAGS} -g -O3")
-    set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS} -O3")
     set(CC "gcc")
     set(CXX "g++")
     set(FC "gfortran")
 elseif(WI4MPI_COMPILER MATCHES INTEL)
-    set(CMAKE_C_FLAGS_RELWITHDEBINFO  "${CMAKE_C_FLAGS} -g -O3")
-    set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS} -O3")
     set(CC "icc")
     set(CXX "icpc")
     set(FC "ifort")
 elseif(WI4MPI_COMPILER MATCHES PGI)
-    set(CMAKE_C_FLAGS_RELWITHDEBINFO  "${CMAKE_C_FLAGS} -g -O3")
-    set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS} -O3")
     set(CC "pgcc")
     set(CXX "pgc++")
     set(FC "pgfortran")
 elseif(WI4MPI_COMPILER MATCHES LLVM)
-    set(CMAKE_C_FLAGS_RELWITHDEBINFO  "${CMAKE_C_FLAGS} -g -O3")
-    set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS} -O3")
     set(CC "clang")
     set(CXX "clang++")
     set(FC "flang")
 elseif(WI4MPI_COMPILER MATCHES ARMCLANG)
-    set(CMAKE_C_FLAGS_RELWITHDEBINFO  "${CMAKE_C_FLAGS} -g -O3")
-    set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS} -O3")
     set(CC "armclang")
     set(CXX "armclang++")
     set(FC "armflang")
 elseif(WI4MPI_COMPILER MATCHES FUJITSU)
-    set(CMAKE_C_FLAGS_RELWITHDEBINFO  "${CMAKE_C_FLAGS} -g -O3")
-    set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS} -O3")
     set(CC "fcc")
     set(CXX "FCC")
     set(FC "frt")
@@ -156,6 +144,9 @@ elseif(WI4MPI_RELEASE MATCHES GCC_JIT)
 else()
     set(CMAKE_BUILD_TYPE "RelWithDebInfo")
 endif()
+
+set(CMAKE_C_FLAGS_RELWITHDEBINFO  "-g -O3")
+set(CMAKE_C_FLAGS_RELEASE "-O3")
 if(WI4MPI_DEBUG)
     add_definitions(-DDEBUG)
 endif()
