use cmake variables instead of env one for compiler

--- a/Testing/etc/mpivars.sh.in
+++ b/Testing/etc/mpivars.sh.in
@@ -15,9 +15,9 @@ export WI4MPI_EXTRA_OPTS=@WI4MPI_EXTRA_OPTS@
 export LD_LIBRARY_PATH=@CMAKE_INSTALL_PREFIX@/lib:${LD_LIBRARY_PATH}
 export PATH=@CMAKE_INSTALL_PREFIX@/bin:${PATH}
 export WI4MPI_ROOT=@CMAKE_INSTALL_PREFIX@
-export WI4MPI_CC=@CC@
-export WI4MPI_CXX=@CXX@
-export WI4MPI_FC=@FC@
+export WI4MPI_CC=@CMAKE_C_COMPILER@
+export WI4MPI_CXX=@CMAKE_CXX_COMPILER@
+export WI4MPI_FC=@CMAKE_Fortran_COMPILER@
 export WI4MPI_TO=OpenMPI
 export WI4MPI_RUN_MPI_C_LIB=@OPENMPI_ROOT@/lib/libmpi.so
 export WI4MPI_RUN_MPI_F_LIB=@OPENMPI_ROOT@/lib/libmpi_mpifh.so
