--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,7 @@
-set(CMAKE_C_COMPILER ${CC})
-set(CMAKE_CXX_COMPILER ${CXX})
-set(CMAKE_Fortran_COMPILER ${FC})
-
-message(STATUS "Project compiler C/C++ : ${CC}/${CXX} && Fortran: ${FC}")
+get_filename_component(C_COMPILER_NAME ${CMAKE_C_COMPILER} NAME)
+get_filename_component(CXX_COMPILER_NAME ${CMAKE_CXX_COMPILER} NAME)
+get_filename_component(FC_COMPILER_NAME ${CMAKE_Fortran_COMPILER} NAME)
+message(STATUS "Project compiler C/C++ : ${C_COMPILER_NAME}/${CXX_COMPILER_NAME} && Fortran: ${FC_COMPILER_NAME}")
 
 #Sources list
 #------------
