--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,53 +9,33 @@ if(WI4MPI_COMPILER MATCHES GCC OR WI4MPI_COMPILER MATCHES GNU)
     if(WI4MPI_COMPILER MATCHES GNU)
     message(DEPRECATION "The GNU value for WI4MPI_COMPILER is deprecated and will be removed in the future; use GCC instead. However, for reasons of backward compatibility, the GNU syntax is still valid for now.")
     endif()
-    set(CC "gcc")
-    set(CXX "g++")
-    set(FC "gfortran")
+    set(CMAKE_C_COMPILER "gcc")
+    set(CMAKE_CXX_COMPILER "g++")
+    set(CMAKE_Fortran_COMPILER "gfortran")
 elseif(WI4MPI_COMPILER MATCHES INTEL)
-    set(CC "icc")
-    set(CXX "icpc")
-    set(FC "ifort")
+    set(CMAKE_C_COMPILER "icc")
+    set(CMAKE_CXX_COMPILER "icpc")
+    set(CMAKE_Fortran_COMPILER "ifort")
 elseif(WI4MPI_COMPILER MATCHES PGI)
-    set(CC "pgcc")
-    set(CXX "pgc++")
-    set(FC "pgfortran")
+    set(CMAKE_C_COMPILER "pgcc")
+    set(CMAKE_CXX_COMPILER "pgc++")
+    set(CMAKE_Fortran_COMPILER "pgfortran")
 elseif(WI4MPI_COMPILER MATCHES LLVM)
-    set(CC "clang")
-    set(CXX "clang++")
-    set(FC "flang")
+    set(CMAKE_C_COMPILER "clang")
+    set(CMAKE_CXX_COMPILER "clang++")
+    set(CMAKE_Fortran_COMPILER "flang")
 elseif(WI4MPI_COMPILER MATCHES ARMCLANG)
-    set(CC "armclang")
-    set(CXX "armclang++")
-    set(FC "armflang")
+    set(CMAKE_C_COMPILER "armclang")
+    set(CMAKE_CXX_COMPILER "armclang++")
+    set(CMAKE_Fortran_COMPILER "armflang")
 elseif(WI4MPI_COMPILER MATCHES FUJITSU)
-    set(CC "fcc")
-    set(CXX "FCC")
-    set(FC "frt")
-    # Force CMake to detect Fujitsu compilers, must be called BEFORE enable_language(Fortran)
-    set(CMAKE_Fortran_COMPILER "frt" CACHE STRING "" FORCE)
+    set(CMAKE_C_COMPILER "fcc")
+    set(CMAKE_CXX_COMPILER "FCC")
+    set(CMAKE_Fortran_COMPILER "frt")
     # Force CMake to detect Fujitsu MPI Library, must be called BEFORE Find MPI
     set(MPI_C_COMPILER "mpifcc" CACHE STRING "" FORCE)
     set(MPI_CXX_COMPILER "mpiFCC" CACHE STRING "" FORCE)
     set(MPI_Fortran_COMPILER "mpifrt" CACHE STRING "" FORCE)
-endif()
-
-# Check presence of CC, CXX and FC compilers
-# If nothing is found, the result will be <VAR>-NOTFOUND
-find_program(CC_PATH "${CC}")
-if("${CC_PATH}" MATCHES "CC_PATH-NOTFOUND")
-    message(FATAL_ERROR "C compiler not found in PATH!
-    Current value of CC is: ${CC}")
-endif()
-find_program(CXX_PATH "${CXX}")
-if("${CXX_PATH}" MATCHES "CXX_PATH-NOTFOUND")
-    message(FATAL_ERROR "C++ compiler not found in PATH!
-    Current value of CXX is: ${CXX}")
-endif()
-find_program(FC_PATH "${FC}")
-if("${FC_PATH}" MATCHES "FC_PATH-NOTFOUND")
-    message(FATAL_ERROR "Fortran compiler not found in PATH!
-    Current value of FC is: ${FC}")
 endif()
 
 if(POLICY CMP0054)
