--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,9 @@ elseif(WI4MPI_COMPILER MATCHES FUJITSU)
     set(MPI_Fortran_COMPILER "mpifrt" CACHE STRING "" FORCE)
 endif()
 
+if(WI4MPI_RELEASE)
+    message(DEPRECATION "WI4MPI_REALESE is deprecated. Use CMAKE_BUILD_TYPE, and options WI4MPI_DEBUG and WI4MPI_JIT instead.")
+endif()
 if(POLICY CMP0054)
     cmake_policy(SET CMP0054 NEW)
 endif()
@@ -119,7 +122,10 @@ elseif(WI4MPI_RELEASE MATCHES RELEASE)
 elseif(WI4MPI_RELEASE MATCHES GCC_JIT)
     set(CMAKE_BUILD_TYPE "RelWithDebInfo")
     set(WI4MPI_JIT ON)
-else()
+elseif(WI4MPI_RELEASE MATCHES NORMAL)
+    set(CMAKE_BUILD_TYPE "RelWithDebInfo")
+endif()
+if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE "RelWithDebInfo")
 endif()
 
