--- a/generator/C/mappers.json
+++ b/generator/C/mappers.json
@@ -758,6 +758,22 @@
     "no_map": "TRUE",
     "debug_type":"%s"
   }, 
+  "string_maxsize_ptr_mapper": {
+    "local_alloc": 0, 
+    "max_mpi": "TRUE",
+    "a2r": "string_max_conv_a2r", 
+    "type": "char *", 
+    "r2a": "string_max_conv_r2a",
+    "debug_type":"%s"
+  },
+  "length_maxsize_ptr_mapper": {
+    "local_alloc": 0, 
+    "max_mpi": "TRUE",
+    "a2r": "length_max_conv_a2r", 
+    "type": "int *", 
+    "r2a": "length_max_conv_r2a",
+    "debug_type":"%*d"
+  },
   "Status_ptr_converter": {
     "local_alloc": 1, 
     "a2r": "status_prt_conv_a2r", 
