don't rely on shebang for tests

--- a/Testing/compile/CMakeLists.txt
+++ b/Testing/compile/CMakeLists.txt
@@ -13,6 +13,6 @@ set (LIST_MPI_COMPILERS mpicc mpicxx mpic++ mpifort mpif77 mpif90)
 foreach (COMP ${LIST_MPI_COMPILERS})
     file (COPY ${CMAKE_CURRENT_SOURCE_DIR}/run_${COMP}_tests.sh
         DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
-    add_test (NAME ${COMP} COMMAND ${CMAKE_CURRENT_BINARY_DIR}/run_${COMP}_tests.sh
+    add_test (NAME ${COMP} COMMAND bash ${CMAKE_CURRENT_BINARY_DIR}/run_${COMP}_tests.sh
         WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
 endforeach ()
