add test for mpi_max_ in fortran

--- a/Testing/mpi_max/CMakeLists.txt
+++ b/Testing/mpi_max/CMakeLists.txt
@@ -10,7 +10,17 @@ file (COPY ${CMAKE_CURRENT_SOURCE_DIR}/info.c
     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 file (COPY ${CMAKE_CURRENT_SOURCE_DIR}/fileview.c
     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+file (COPY ${CMAKE_CURRENT_SOURCE_DIR}/run_mpi_max_f_tests.sh
+    DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+file (COPY ${CMAKE_CURRENT_SOURCE_DIR}/main.f90
+    DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+file (COPY ${CMAKE_CURRENT_SOURCE_DIR}/info.f90
+    DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+file (COPY ${CMAKE_CURRENT_SOURCE_DIR}/fileview.f90
+    DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 add_test (NAME mpi_max_simple COMMAND ${CMAKE_CURRENT_BINARY_DIR}/run_mpi_max_tests.sh
+    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
+add_test (NAME mpi_max_simple_fortran COMMAND ${CMAKE_CURRENT_BINARY_DIR}/run_mpi_max_f_tests.sh
     WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
 if (WI4MPI_BATCH_SCHEDULER MATCHES "mpirun")
     file (COPY ${CMAKE_CURRENT_SOURCE_DIR}/run_mpi_max_port_tests.sh
@@ -19,6 +29,14 @@ if (WI4MPI_BATCH_SCHEDULER MATCHES "mpirun")
         DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
     file (COPY ${CMAKE_CURRENT_SOURCE_DIR}/port-server.c
         DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+    file (COPY ${CMAKE_CURRENT_SOURCE_DIR}/run_mpi_max_port_f_tests.sh
+        DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+    file (COPY ${CMAKE_CURRENT_SOURCE_DIR}/port-client.f90
+        DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+    file (COPY ${CMAKE_CURRENT_SOURCE_DIR}/port-server.f90
+        DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
     add_test (NAME mpi_max_port COMMAND ${CMAKE_CURRENT_BINARY_DIR}/run_mpi_max_port_tests.sh
+        WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
+    add_test (NAME mpi_max_port_fortran COMMAND ${CMAKE_CURRENT_BINARY_DIR}/run_mpi_max_port_f_tests.sh
         WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
 endif()
