(python_linter): ignore flake8 W291

--- a/scripts/python_linter/flake8.conf
+++ b/scripts/python_linter/flake8.conf
@@ -7,4 +7,7 @@ max-line-length = 100
 # - E203: conflicts with black, this rule is not PEP8 compliant
 #         https://github.com/psf/black/issues/315
 #
-ignore = E203
+# - W291: flake8 does not allow trailing whitespace, even in docstrings
+#         so just ignore and let Pylint doing the job
+#
+ignore = E203, W291
