[feature](lib): POC of code generator

--- a/lib/logging.conf
+++ b/lib/logging.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,generator_logger,header_logger
+keys=root,generator_logger,header_logger,code_logger
 
 [handlers]
 keys=console_handler,file_handler
@@ -21,6 +21,10 @@ level=DEBUG
 handlers=file_handler
 qualname=header_logger
 
+[logger_code_logger]
+level=DEBUG
+handlers=file_handler
+qualname=code_logger
 
 [handler_console_handler]
 class=StreamHandler
