--- a/Testing/timeout/CMakeLists.txt
+++ b/Testing/timeout/CMakeLists.txt
@@ -9,5 +9,4 @@ file (COPY ${CMAKE_CURRENT_SOURCE_DIR}/run_timeout_tests.sh
 add_test (NAME MPI_Reduce_timeout
     COMMAND bash ${CMAKE_CURRENT_BINARY_DIR}/run_timeout_tests.sh
     WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
-set_tests_properties (MPI_Reduce_timeout PROPERTIES PASS_REGULAR_EXPRESSION 0
-    TIMEOUT 30)
+set_tests_properties (MPI_Reduce_timeout PROPERTIES PASS_REGULAR_EXPRESSION "^0\n$" TIMEOUT 30)
