[style](scripts/python_linter): ignore flake8 W503

--- a/scripts/python_linter/flake8.conf
+++ b/scripts/python_linter/flake8.conf
@@ -10,4 +10,6 @@ max-line-length = 100
 # - W291: flake8 does not allow trailing whitespace, even in docstrings
 #         so just ignore and let Pylint doing the job
 #
-ignore = E203, W291
+# - W503: conflicts with black formating, allow line break before binary operator
+#
+ignore = E203, W291, W503
